--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -5,5 +5,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#FFFFFF",
-  "background_color": "#ffffff"
+  "background_color": "#FFD7D7"
 }
